--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 #개발환경 추적 X
+# - media/ --> 미디어 폴더 내부에 올리는 파일들이 쌓임
 venv/
 
 .env
@@ -86,3 +87,5 @@ db.sqlite3
 .idea/
 
 __pycache__/
+
+media/
